# sdftracks

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  blockmain.cpp  configuration.cpp  configuration.h  filter.cpp  filter.h  main.cpp  main.h  particle.cpp  particle.h  typedefs.h
SDF/: Doxyfile  Makefile  cmake_install.cmake
SDF/include/: sdf.h
SDF/src/: Makefile  cmake_install.cmake  sdf_helper.c
src/: CMakeLists.txt  blocklist  blockmain.h  constants.h  filter.cpp  main.cpp  main.h  sdftracks  typedefs.h
